Update Item service layer